cabal-version:      2.4
name:               aoc22
version:            0.1.0.0
author:             Michalis Pardalos
maintainer:         m.pardalos@gmail.com

library
    default-language: Haskell2010
    build-depends:    base, safe, containers, split, deepseq, bytestring
    hs-source-dirs:   solutions
    exposed-modules:  Solutions

executable aoc22
    default-language: Haskell2010
    build-depends:    base, aoc22, bytestring
    main-is:          Main.hs

benchmark bench
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    build-depends:    base, aoc22, criterion, bytestring
    main-is:          Benchmark.hs
