cabal-version:      2.4
name:               aoc22
version:            0.1.0.0
author:             Michalis Pardalos
maintainer:         m.pardalos@gmail.com

common opts
    default-extensions: TypeApplications ViewPatterns GADTs ImportQualifiedPost
    default-language: Haskell2010

library
    import:           opts
    build-depends:    base, safe, containers, split, deepseq, bytestring, vector
    hs-source-dirs:   solutions
    exposed-modules:  Solutions
    other-modules:    Day1, Day2, Day3, Day4, Day5

executable aoc22
    import:           opts
    build-depends:    base, aoc22, bytestring
    main-is:          Main.hs

benchmark bench
    import:           opts
    type:             exitcode-stdio-1.0
    build-depends:    base, aoc22, criterion, bytestring, containers
    main-is:          Benchmark.hs
